--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,7 +12,7 @@
 	<string name="get_texts">Get voices orders</string>   
 	
 	<!--  Settings -->
-	<string name="voice_relevance">Min. relevance for the voice record (%)</string>   
+	<string name="voice_relevance">Min. relevance for the voice record (0&#8211;20)</string>   
 	<string name="server_ip">Server IP : </string>
 	<string name="ok">Save settings</string>
 	
