--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,8 @@
 	<string name="get_commands">Get commands</string>
 	<string name="welcome_voicy">Welcome on the Voicy app</string>
 	<string name="get_texts">Get voices orders</string>   
+	<string name="voice_record">Understood voice : </string>
+	<string name="chosen_command">Chosen command : </string>
 	
 	<!--  Settings -->
 	<string name="voice_relevance">Min. relevance for the voice record (0&#8211;20)</string>   
